--- a/src/GraphQlClientGenerator/GraphQlClientGenerator.csproj
+++ b/src/GraphQlClientGenerator/GraphQlClientGenerator.csproj
@@ -24,7 +24,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.*" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.*" PrivateAssets="All" />
     <PackageReference Include="System.Net.Http" Version="4.*" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.*" GeneratePathProperty="true" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
